Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6819

LBUG ASSERTION( tdtd->tdtd_last_update_transno <= transno ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.8.0
    • Lustre 2.8.0
    • None
    • Lola - 2.7.56 tag
    • 3
    • 9223372036854775807

      After several MDT failovers (ldiskfs format) the MDT is failing to mount. Mount produces this LBUG:

      Jul  8 15:55:53 lola-11 kernel: LustreError: 38479:0:(ldlm_lib.c:2313:replay_request_or_update()) ASSERTION( tdtd->tdtd_last_update_transno <= transno ) failed:
      Jul  8 15:55:53 lola-11 kernel: LustreError: 38479:0:(ldlm_lib.c:2313:replay_request_or_update()) LBUG
      

      Unfortunately panic_on_lbug was set. Will attempt to reproduce and get stack
      So far we have

      Call Trace:^M
       [<ffffffffa0741875>] libcfs_debug_dumpstack+0x55/0x80 [libcfs]^M
       [<ffffffffa0741e77>] lbug_with_loc+0x47/0xb0 [libcfs]^M
       [<ffffffffa0a909e7>] target_recovery_thread+0x2147/0x2720 [ptlrpc]^M
       [<ffffffff8152a2be>] ? thread_return+0x4e/0x7d0^M
       [<ffffffffa0a8e8a0>] ? target_recovery_thread+0x0/0x2720 [ptlrpc]^M
       [<ffffffff8109e78e>] kthread+0x9e/0xc0^M
       [<ffffffff8100c28a>] child_rip+0xa/0x20^M
       [<ffffffff8109e6f0>] ? kthread+0x0/0xc0^M
       [<ffffffff8100c280>] ? child_rip+0x0/0x20^M
      

            di.wang Di Wang (Inactive)
            cliffw Cliff White (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: