LU-6819 update: update transno of replay properly

Do not update master transno when the update request
in the replay list, otherwise it will effect the order
of the replay list.

Signed-off-by: wang di <di.wang@intel.com>
Change-Id: I73709be714724c36f34ff64f8eabf4c2bec1112d